# practical

core/: CMakeLists.txt
core/list/: CMakeLists.txt  llgen.c
include/: .llapp.h.swp  llgen.h
include/src/: llapp.h  stacks.h
include/util/: .llapp.h.swp
src/: CMakeLists.txt
src/hash/: CMakeLists.txt  hash.c
src/list/: CMakeLists.txt  llapp.c
src/stack/: CMakeLists.txt  stacks.c
test/: CMakeLists.txt
test/test_list/: CMakeLists.txt  lldriver.c
test/test_stack/: CMakeLists.txt  braces.c
utility/: CMakeLists.txt
utility/uhash/: CMakeLists.txt  birthday.c  wordlist.c
utility/ulist/: CMakeLists.txt  llapp.c  lldriver.c
utility/ustack/: CMakeLists.txt  braces.c
